Implement tree drawing